Fixed alignments so they're in the correct grid order, changed button colors to slightly darker shade

--- a/frontend/src/styles/alignment.css
+++ b/frontend/src/styles/alignment.css
@@ -6,7 +6,7 @@
 } */
 
 .alignment {
-  background-color: #ed1c24;
+  background-color: #d81a21;
   color: whitesmoke;
   /* font-size: 1.2rem; */
   padding: 0.75rem 0.75rem;
@@ -45,8 +45,63 @@
   border-radius: 7%;
 }
 
+.alignment_title {
+  display: grid;
+  grid-auto-flow: row;
+  justify-content: center;
+  color: whitesmoke;
+  font-size: 2.5rem;
+  padding: 0.5rem;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 .learn_button {
   background-color: #ed1c24;
   color: whitesmoke;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+#lg {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+#ln {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+#le {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+#ng {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+#tn {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+#ne {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+#cg {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+}
+
+#cn {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+
+#ce {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
 }
