--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -43,7 +43,7 @@ header {
 } */
 
 .generic_button {
-  background-color: #ed1c24;
+  background-color: #d81a21;
   color: whitesmoke;
   font-size: 1.2rem;
   grid-area: button;
@@ -165,7 +165,7 @@ header {
 }
 
 .select-class_button {
-  background-color: #ed1c24;
+  background-color: #d81a21;
   color: whitesmoke;
   font-size: 1.5rem;
   grid-area: button;
@@ -236,7 +236,7 @@ header {
 }
 
 .select-race_button {
-  background-color: #ed1c24;
+  background-color: #d81a21;
   color: whitesmoke;
   font-size: 1.5rem;
   grid-area: button;
@@ -252,6 +252,7 @@ header {
 
 .race-info {
   grid-area: info;
+  grid-row-start: 4;
   overflow: scroll;
   color: black;
   text-shadow: unset;
@@ -279,6 +280,7 @@ header {
 
 .race_name {
   grid-area: name;
+  justify-self: center;
   color: whitesmoke;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
